092_lls/grade.txt
Grading at 11/11/2022:20:27:16.277080
For commit ID e3bc00f8d530e6e21676ac034255051a840c9241
Grading at Fri Nov 11 03:27:15 PM EST 2022
-----------------------------------------------
testcase 1 : Testing with LinkedList<int>
...compiling...
In file included from tester.cpp:1:
ll.hpp: In instantiation of ‘LinkedList<T>& LinkedList<T>::operator=(const LinkedList<T>&) [with T = int]’:
tester.cpp:94:11:   required from here
ll.hpp:46:14: error: unused variable ‘n1’ [-Werror=unused-variable]
   46 |       Node * n1 = this->head;
      |              ^~
cc1plus: all warnings being treated as errors
The code did not compile.  This test failed.
-----------------------------------------------
testcase 2 : Testing with LinkedList<std::string>
...compiling...
In file included from tester.cpp:1:
ll.hpp: In instantiation of ‘LinkedList<T>& LinkedList<T>::operator=(const LinkedList<T>&) [with T = std::__cxx11::basic_string<char>]’:
tester.cpp:94:11:   required from here
ll.hpp:46:14: error: unused variable ‘n1’ [-Werror=unused-variable]
   46 |       Node * n1 = this->head;
      |              ^~
cc1plus: all warnings being treated as errors
The code did not compile.  This test failed.
-----------------------------------------------
testcase 3 : Testing with LinkedList<(a custom class we wrote)>
...compiling...
In file included from tester.cpp:1:
ll.hpp: In instantiation of ‘LinkedList<T>& LinkedList<T>::operator=(const LinkedList<T>&) [with T = Tester]’:
tester.cpp:94:11:   required from here
ll.hpp:46:14: error: unused variable ‘n1’ [-Werror=unused-variable]
   46 |       Node * n1 = this->head;
      |              ^~
cc1plus: all warnings being treated as errors
The code did not compile.  This test failed.

Overall Grade: F
